--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -73,7 +73,7 @@
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="<%= `/mountainInfo/${m.number}` %>">View</a></button>
+                                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="`/mountainInfo/<%= m.number %>`">View</a></button>
                                         </div>
                                         <i class="fa-regular fa-heart" id="<%= m.name %>" onclick="switchHeart(this.id)"></i>
                                     </div>
