--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -59,11 +59,11 @@
 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <%= const mountainList = mountains %>
-                    <% mountainList.forEach(m => { %>
+                    <%= mountainList.forEach(m => { %>
                         <div class="col">
                             <div class="card shadow-sm">
                                 <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <img src="" alt="" />
+                                    <!-- <img src="" alt="" /> -->
                                     <title>Placeholder</title>
                                     <rect width="100%" height="100%" fill="#cae3cc" />
                                 </svg>
