--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -75,7 +75,7 @@
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary"><a href="<%= `/mountainInfo/${m.number}` %>">View</a></button>
                                         </div>
-                                        <i class="fa-regular fa-heart" id="<%= m.number %>" onclick="switchHeart(this.id)"></i>
+                                        <i class="fa-regular fa-heart" id="<%= m.number %>" onclick="switchHeart(this.id, m)"></i>
                                     </div>
                                 </div>
                             </div>
@@ -292,7 +292,7 @@
 </body>
 
 <script>
-    function switchHeart(clickedId) {
+    function switchHeart(clickedId, m) {
         const defaultHeart = document.getElementById(clickedId);
         
         if (defaultHeart.classList.contains('fa-regular')) {
