--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -58,7 +58,7 @@
             <div class="container">
 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <% const m %>
+                    <% let m; %>
                     <%= mountains.forEach(m => { %>
                         <div class="col">
                             <div class="card shadow-sm">
