--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -298,12 +298,12 @@
         if (defaultHeart.classList.contains('fa-regular')) {
             defaultHeart.classList.replace('fa-regular', 'fa-solid');
             defaultHeart.style.color = "red";
-            // req.render("bookmark/<%= m.number %>");
+            // req.render("bookmark/<%= // m.number %>");
         }
         else {
             defaultHeart.classList.replace('fa-solid', 'fa-regular');
             defaultHeart.style.color = "black";
-            // req.render("bookmark/<%= m.number %>");
+            // req.render("bookmark/<%= // m.number %>");
         }
     }
 </script>
